# avroscript

./: Cargo.toml  README.md  generated.ts
src/: cli.rs  main.rs  model.rs  typescript_conversion.rs
test/: test_avsc.rs
