[package]
name = "avroscript"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.108"
serde = {version = "1", features = ["derive"]}
anyhow = "1.0.75"
log = "0.4.20"
pretty_env_logger = "0.4"
