[package]
name = "avroscript"
version = "0.1.0"
authors = ["Cameron Harris <cameronh63@gmail.com>"]
edition = "2021"
description = "A tool to parse and convert avro schema to arbitrary types."
readme = "README.md"
homepage = "https://github.com/ilikepi63/avroscript"
repository = "https://github.com/ilikepi63/avroscript"
keywords = ["cli", "avro"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.108"
serde = {version = "1", features = ["derive"]}
anyhow = "1.0.75"
log = "0.4.20"
pretty_env_logger = "0.4"
clap = { version = "4.4.8", features = ["derive"]} 
